tests/vectors/valid/map_name_value_42.hex
6E 72 66 31  07  02
  04  04  6E 61 6D 65         
  04  04  74 65 73 74         
  04  05  76 61 6C 75 65      
  03  00 00 00 00  00 00 00 2A
