tests/vectors/invalid/unsorted_keys.hex
6E 72 66 31  07  02
  04 01 62
  02
  04 01 61
  01
